improved formatting of '--help' output in a way to be more friendly for help2man

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,6 @@ OPTION(BUILD_MEGAGLEST "Build MegaGlest" ON)
 OPTION(BUILD_MEGAGLEST_TESTS "Build MegaGlest Unit Tests" OFF)
 OPTION(WANT_SINGLE_INSTALL_DIRECTORY "Use single install directory for everything. It is useful for example for MacOS cpack bundles." OFF)
 OPTION(WANT_STATIC_LIBS "Builds as many static libs as possible." OFF)
-OPTION(WANT_STATIC_WX_LIBS "Builds with static wxWidgets libs if possible." OFF)
 OPTION(WANT_USE_VLC "Use libVLC to play videos." ON)
 OPTION(WANT_USE_OpenSSL "Use libOpenSSL during CURL linking." ON)
 OPTION(WANT_USE_FriBiDi "Enable libFriBIDi support." ON)
@@ -255,44 +254,56 @@ IF(CMAKE_COMPILER_IS_GNUCXX OR MINGW)
 		ENDIF()
 	ENDIF()
 
+	SET(COMMON_INFO_ABOUT_PATH "(if the path is relative then is appended to the CMAKE_INSTALL_PREFIX)")
 	IF(CMAKE_INSTALL_PREFIX STREQUAL "")
 		MESSAGE(STATUS "*NOTE: NOT USING a Custom Data Install Path...")
 	ELSE()
 		IF(WANT_SINGLE_INSTALL_DIRECTORY AND NOT MEGAGLEST_SINGLE_DIRECTORY_INSTALL_PATH)
-			SET(MEGAGLEST_SINGLE_DIRECTORY_INSTALL_PATH "megaglest-game/" CACHE STRING "The single directory installation path for game (this is appended to the CMAKE_INSTALL_PREFIX)")
+			SET(MEGAGLEST_SINGLE_DIRECTORY_INSTALL_PATH "megaglest-game/" CACHE STRING "The single directory installation path for game ${COMMON_INFO_ABOUT_PATH}")
 		ENDIF()
 		IF(NOT MEGAGLEST_BIN_INSTALL_PATH AND NOT WANT_SINGLE_INSTALL_DIRECTORY)
-			SET(MEGAGLEST_BIN_INSTALL_PATH "bin/" CACHE STRING "The installation path for binaries (this is appended to the CMAKE_INSTALL_PREFIX)")
+			SET(MEGAGLEST_BIN_INSTALL_PATH "bin/" CACHE STRING "The installation path for binaries ${COMMON_INFO_ABOUT_PATH}")
 		ENDIF()
 		IF(NOT MEGAGLEST_DATA_INSTALL_PATH AND NOT WANT_SINGLE_INSTALL_DIRECTORY)
-			SET(MEGAGLEST_DATA_INSTALL_PATH "share/megaglest/" CACHE STRING "The installation path for data files (this is appended to the CMAKE_INSTALL_PREFIX)")
+			SET(MEGAGLEST_DATA_INSTALL_PATH "share/megaglest/" CACHE STRING "The installation path for data files ${COMMON_INFO_ABOUT_PATH}")
 		ENDIF()
+		SET(MEGAGLEST_INI_INSTALL_PATH "${MEGAGLEST_DATA_INSTALL_PATH}")
 		IF(NOT MEGAGLEST_DESKTOP_INSTALL_PATH AND NOT WANT_SINGLE_INSTALL_DIRECTORY)
-			SET(MEGAGLEST_DESKTOP_INSTALL_PATH "share/applications/" CACHE STRING "The installation path for desktop files (this is appended to the CMAKE_INSTALL_PREFIX)")
+			SET(MEGAGLEST_DESKTOP_INSTALL_PATH "share/applications/" CACHE STRING "The installation path for desktop files ${COMMON_INFO_ABOUT_PATH}")
 		ENDIF()
 		IF(NOT MEGAGLEST_ICON_INSTALL_PATH AND NOT WANT_SINGLE_INSTALL_DIRECTORY)
-			SET(MEGAGLEST_ICON_INSTALL_PATH "share/pixmaps/" CACHE STRING "The installation path for icon files (this is appended to the CMAKE_INSTALL_PREFIX)")
+			SET(MEGAGLEST_ICON_INSTALL_PATH "share/pixmaps/" CACHE STRING "The installation path for icon files ${COMMON_INFO_ABOUT_PATH}")
 		ENDIF()
 		IF(NOT MEGAGLEST_MANPAGE_INSTALL_PATH AND NOT WANT_SINGLE_INSTALL_DIRECTORY)
-			SET(MEGAGLEST_MANPAGE_INSTALL_PATH "share/man/man6/" CACHE STRING "The installation path for manpage files (this is appended to the CMAKE_INSTALL_PREFIX)")
+			SET(MEGAGLEST_MANPAGE_INSTALL_PATH "share/man/man6/" CACHE STRING "The installation path for manpage files ${COMMON_INFO_ABOUT_PATH}")
 		ENDIF()
 		IF(WANT_SINGLE_INSTALL_DIRECTORY)
-			FOREACH(MG_PATH BIN DATA DESKTOP ICON)
+			FOREACH(MG_PATH BIN DATA INI DESKTOP ICON)
 				IF(NOT MEGAGLEST_${MG_PATH}_INSTALL_PATH)
 					SET(MEGAGLEST_${MG_PATH}_INSTALL_PATH "${MEGAGLEST_SINGLE_DIRECTORY_INSTALL_PATH}")
 				ENDIF()
 			ENDFOREACH()
 		ENDIF()
-
 		IF(NOT WANT_SINGLE_INSTALL_DIRECTORY)
+			FOREACH(MG_PATH DATA INI)
+				IF(IS_ABSOLUTE "${MEGAGLEST_${MG_PATH}_INSTALL_PATH}")
+					SET(MEGAGLEST_FULL_${MG_PATH}_INSTALL_PATH "${MEGAGLEST_${MG_PATH}_INSTALL_PATH}/")
+				ELSE()
+					SET(MEGAGLEST_FULL_${MG_PATH}_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}/${MEGAGLEST_${MG_PATH}_INSTALL_PATH}/")
+				ENDIF()
+				STRING(REGEX REPLACE "//+" "/" MEGAGLEST_FULL_${MG_PATH}_INSTALL_PATH "${MEGAGLEST_FULL_${MG_PATH}_INSTALL_PATH}")
+			ENDFOREACH()
+
 			IF(NOT CUSTOM_DATA_INSTALL_PATH)
-				SET(CUSTOM_DATA_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}/${MEGAGLEST_DATA_INSTALL_PATH}" CACHE STRING "The FULL installation path for data files (this is build automatically by combining CMAKE_INSTALL_PREFIX and MEGAGLEST_DATA_INSTALL_PATH)")
+				SET(CUSTOM_DATA_INSTALL_PATH "${MEGAGLEST_FULL_DATA_INSTALL_PATH}")
+				# ^ someday this intermediate step may be removed
 			ENDIF()
-			SET(CUSTOM_DATA_INSTALL_PATH_VALUE "-DCUSTOM_DATA_INSTALL_PATH=${CUSTOM_DATA_INSTALL_PATH}")
+			SET(CUSTOM_INSTALL_PATHS_VALUES "-DCUSTOM_DATA_INSTALL_PATH=${CUSTOM_DATA_INSTALL_PATH}")
 		ENDIF()
 
-		SET(PKG_DATADIR ${CUSTOM_DATA_INSTALL_PATH_VALUE})
-		SET(PKG_BINDIR ${MEGAGLEST_BIN_INSTALL_PATH})
+		#SET(PKG_DATADIR ${CUSTOM_DATA_INSTALL_PATH_VALUE})
+		#SET(PKG_BINDIR ${MEGAGLEST_BIN_INSTALL_PATH})
+		# ^ hard to tell for what it is needed and most likely both were set to wrong values, so let's try to not use them
 		MESSAGE(STATUS "*NOTE: Custom Data Install Path is [${CUSTOM_DATA_INSTALL_PATH}]")
 	ENDIF()
 
@@ -300,7 +311,7 @@ IF(CMAKE_COMPILER_IS_GNUCXX OR MINGW)
 	IF(HAS_GIT STREQUAL "TRUE")
 		SET(CMAKE_CXX_FLAGS_${MG_BUILD_TYPE} "${CMAKE_CXX_FLAGS_${MG_BUILD_TYPE}} ${GIT_VERSION_CMD}")
 	ENDIF()
-	SET(CMAKE_CXX_FLAGS_${MG_BUILD_TYPE} "${CMAKE_CXX_FLAGS_${MG_BUILD_TYPE}} ${CUSTOM_DATA_INSTALL_PATH_VALUE}")
+	SET(CMAKE_CXX_FLAGS_${MG_BUILD_TYPE} "${CMAKE_CXX_FLAGS_${MG_BUILD_TYPE}} ${CUSTOM_INSTALL_PATHS_VALUES}")
 
 	# We do some funky character escaping to get the right stuff written out to 
 	# the final Makefile so we get the GIT Global Revsion #
@@ -330,12 +341,9 @@ IF(NOT WANT_DEPRECATION_WARNINGS)
 ENDIF()
 MARK_AS_ADVANCED(WANT_DEPRECATION_WARNINGS)
 
-SET(WANT_USE_SDL2 ON)
-IF(WANT_USE_SDL2)
-	SET(SDL_WINDOWS_DIR_DINC "SDL-2.0.x")
-	SET(SDL_VERSION_NAME "SDL2")
-	SET(SDL_VERSION_SNAME "sdl")
-ENDIF()
+SET(SDL_WINDOWS_DIR_DINC "SDL-2.0.x")
+SET(SDL_VERSION_NAME "SDL2")
+SET(SDL_VERSION_SNAME "sdl")
 
 OPTION(WANT_DEV_OUTPATH "Use developer friendly output paths." OFF)
 IF(UNIX AND "${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
