--- a/source/glest_game/CMakeLists.txt
+++ b/source/glest_game/CMakeLists.txt
@@ -316,13 +316,13 @@ IF(BUILD_MEGAGLEST)
 		IF(EXISTS ${XVFB_EXEC})
 			MESSAGE(STATUS "***-- Found xvfb-run: ${XVFB_EXEC} about to build manpage with it.")
 
-		  	add_custom_target(${TARGET_NAME_MANPAGE} ALL
-		    		COMMAND ${XVFB_EXEC} --auto-servernum --server-num=770 ${HELP2MAN} --name='${MG_MANPAGE_DESCRIPTION}' --section=6 -N -o ${HELP2MAN_OUT_PATH}${TARGET_NAME_MANPAGE} ${HELP2MAN_OUT_PATH}${TARGET_NAME}
-		    	DEPENDS ${TARGET_NAME})
+			add_custom_target(${TARGET_NAME_MANPAGE} ALL
+				COMMAND ${XVFB_EXEC} --auto-servernum --server-num=770 ${HELP2MAN} --name="${MG_MANPAGE_DESCRIPTION}" --section=6 -N -o ${HELP2MAN_OUT_PATH}${TARGET_NAME_MANPAGE} ${HELP2MAN_OUT_PATH}${TARGET_NAME}
+			DEPENDS ${TARGET_NAME})
 		ELSE()
-		  	add_custom_target(${TARGET_NAME_MANPAGE} ALL
-		    		COMMAND ${HELP2MAN} --name='${MG_MANPAGE_DESCRIPTION}' --section=6 -N -o ${HELP2MAN_OUT_PATH}${TARGET_NAME_MANPAGE} ${HELP2MAN_OUT_PATH}${TARGET_NAME}
-		    	DEPENDS ${TARGET_NAME})
+			add_custom_target(${TARGET_NAME_MANPAGE} ALL
+				COMMAND ${HELP2MAN} --name="${MG_MANPAGE_DESCRIPTION}" --section=6 -N -o ${HELP2MAN_OUT_PATH}${TARGET_NAME_MANPAGE} ${HELP2MAN_OUT_PATH}${TARGET_NAME}
+			DEPENDS ${TARGET_NAME})
 		ENDIF()
 	ENDIF()
 
@@ -347,7 +347,7 @@ IF(BUILD_MEGAGLEST)
 		IF(UNIX)
 			INSTALL(FILES
 				"${PROJECT_SOURCE_DIR}/mk/linux/start_megaglest_gameserver"
-				DESTINATION ${MEGAGLEST_DATA_INSTALL_PATH})
+				DESTINATION ${MEGAGLEST_INI_INSTALL_PATH})
 		ENDIF()
 		INSTALL(FILES
 			"${PROJECT_SOURCE_DIR}/mk/shared/glestkeys.ini"
@@ -356,15 +356,15 @@ IF(BUILD_MEGAGLEST)
 		IF(WIN32)
 			INSTALL(FILES
 				"${PROJECT_SOURCE_DIR}/mk/windoze/glest.ini"
-				DESTINATION ${MEGAGLEST_DATA_INSTALL_PATH})
+				DESTINATION ${MEGAGLEST_INI_INSTALL_PATH})
 		ELSEIF(UNIX AND NOT APPLE)
 			INSTALL(FILES
 				"${PROJECT_SOURCE_DIR}/mk/linux/glest.ini"
-				DESTINATION ${MEGAGLEST_DATA_INSTALL_PATH})
+				DESTINATION ${MEGAGLEST_INI_INSTALL_PATH})
 		ELSEIF(UNIX AND APPLE)
 			INSTALL(FILES
 				"${PROJECT_SOURCE_DIR}/mk/macos/glest.ini"
-				DESTINATION ${MEGAGLEST_DATA_INSTALL_PATH})
+				DESTINATION ${MEGAGLEST_INI_INSTALL_PATH})
 			IF(WANT_SINGLE_INSTALL_DIRECTORY AND EXISTS "${PROJECT_SOURCE_DIR}/mk/macos/p7zip/")
 				INSTALL(DIRECTORY
 					"${PROJECT_SOURCE_DIR}/mk/macos/p7zip"
@@ -379,7 +379,7 @@ IF(BUILD_MEGAGLEST)
 
 		INSTALL(FILES
 			"${PROJECT_SOURCE_DIR}/mk/shared/megaglest.ico"
-			DESTINATION ${MEGAGLEST_DATA_INSTALL_PATH})
+			DESTINATION ${MEGAGLEST_INI_INSTALL_PATH})
 		IF(UNIX AND APPLE AND NOT WANT_SINGLE_INSTALL_DIRECTORY)
 			INSTALL(FILES
 				"${PROJECT_SOURCE_DIR}/mk/macos/bundle_resources/MegaGlest.icns"
