--- a/.travis.yml
+++ b/.travis.yml
@@ -7,21 +7,37 @@ matrix:
   include:
     - os: linux
       compiler: gcc
+      addons:
+          apt:
+            packages:
+            - libsdl2-dev
       env: Tr_Compiler_Version="7"
       # https://launchpad.net/~ubuntu-toolchain-r/+archive/ubuntu/test
       dist: trusty # broken compiler on 12.04
     - os: linux
       compiler: gcc
+      addons:
+          apt:
+            packages:
+            - libsdl2-dev
       env: Tr_Compiler_Version="default"
       dist: trusty
     - os: linux
       compiler: clang
+      addons:
+          apt:
+            packages:
+            - libsdl2-dev
       env: Tr_Compiler_Version="5.0"
       # http://apt.llvm.org/, compiler not newer than available on debian testing
       # https://packages.debian.org/search?suite=testing&keywords=clang-
       dist: trusty
     - os: linux
       compiler: clang
+      addons:
+          apt:
+            packages:
+            - libsdl2-dev
       env: Tr_Compiler_Version="default"
       dist: trusty # broken compiler on 12.04
     - os: osx
