- check for both default and x64 windows binary from steam shim

--- a/source/steamshim_parent/Makefile.win
+++ b/source/steamshim_parent/Makefile.win
@@ -1,5 +1,5 @@
 TARGET				= megaglest_shim
-GAME_LAUNCH_NAME	= megaglestx64
+GAME_LAUNCH_NAME	= megaglest
 
 !ifndef STEAMWORKS
 # STEAMWORKS			= ..\..\..\steamworks_sdk\sdk
