--- a/.travis.yml
+++ b/.travis.yml
@@ -55,8 +55,10 @@ matrix:
       # https://docs.travis-ci.com/user/osx-ci-environment/#OS-X-Version
       # https://github.com/Homebrew/brew/blob/master/docs/Installation.md#requirements
     - os: osx
+      osx_image: xcode9.2
       env: Tr_Xcode_Version="9.2"
     - os: osx
+      osx_image: xcode10.1
       env: Tr_Xcode_Version="10.1"
   fast_finish: true
   allow_failures:
