--- a/.travis.yml
+++ b/.travis.yml
@@ -1,99 +1,115 @@
 # https://docs.travis-ci.com/user/customizing-the-build/
 language: cpp
-
-sudo: required
-
+cache: ccache
 matrix:
   include:
     - os: linux
-      compiler: gcc
-      addons:
-          apt:
-            packages:
-            - libsdl2-dev
-      env: Tr_Compiler_Version="7"
-      # https://launchpad.net/~ubuntu-toolchain-r/+archive/ubuntu/test
-      dist: trusty # broken compiler on 12.04
-    - os: linux
-      compiler: gcc
-      addons:
-          apt:
-            packages:
-            - libsdl2-dev
-      env: Tr_Compiler_Version="8"
       dist: trusty
+      compiler: gcc
+      env: DEFAULT_TRAVIS_COMPILER="true" TRAVIS_DIST="trusty"
+# use xenial for new versions of gcc and because libsdl2-dev isn't available
+# on trusty
     - os: linux
+      dist: xenial
       compiler: gcc
       addons:
-          apt:
-            packages:
-            - libsdl2-dev
-      env: Tr_Compiler_Version="default"
-      dist: trusty
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
+      env: MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
     - os: linux
+      dist: xenial
+      compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6
+      env: MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+    - os: linux
+      dist: xenial
+      compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+      env: MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+    - os: linux
+      dist: xenial
+      compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-8
+      env: MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
+# clang
+    - os: linux
+      dist: xenial
       compiler: clang
       addons:
-          apt:
-            packages:
-            - libsdl2-dev
-      env: Tr_Compiler_Version="5.0"
-      # http://apt.llvm.org/, compiler not newer than available on debian testing
-      # https://packages.debian.org/search?suite=testing&keywords=clang-
-      dist: trusty
-    - os: linux
-      compiler: clang
-      addons:
-          apt:
-            packages:
-            - libsdl2-dev
-      env: Tr_Compiler_Version="default"
-      dist: trusty # broken compiler on 12.04
+        apt:
+          sources:
+            - llvm-toolchain-xenial-5.0
+          packages:
+            - clang-5.0
+      env: MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
+# osx
     - os: osx
-      #osx_image: xcode6.4 # seems broken and has lower priority in queue than default one
-      env: Tr_Xcode_Version="default"
-      #env: Tr_Xcode_Version="6.4"
-      # https://docs.travis-ci.com/user/osx-ci-environment/#OS-X-Version
-      # https://github.com/Homebrew/brew/blob/master/docs/Installation.md#requirements
-    - os: osx
-      osx_image: xcode9.2
-      env: Tr_Xcode_Version="9.2"
+      osx_image: xcode9.4
+      env: XCODE="true"
     - os: osx
       osx_image: xcode10.1
-      env: Tr_Xcode_Version="10.1"
+      env: XCODE="true"
+  
   fast_finish: true
   allow_failures:
     - os: osx
-    # it's not really acceptable to wait 40 minutes or sometimes up to even 3 hours
-    # for the result just because the queue for mac is always so long
 
 git:
   submodules: false
 
-#branches:
-#  only:
-#    - master
-
 before_install:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then ./.travis-before_install.sh "$CC" "$Tr_Compiler_Version"; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install sdl2 lua freetype ftgl libogg glew libvorbis cppunit glib fribidi miniupnpc wxmac; fi
-    # ^ not on travis also needed are: cmake + pkgconfig + xquartz (find by "search") + (maybe) git + (maybe) bash
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew outdated cmake || brew upgrade cmake; brew outdated pkgconfig || brew upgrade pkgconfig; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew link --force gettext; fi
-    # ^ odd linking problems related with brew which is not creating links
-  - if [ "$TRAVIS_OS_NAME" = "osx" ] && [ "$Tr_Xcode_Version" = "6.4" ]; then brew install Caskroom/cask/xquartz; fi
-  - if [ "$Tr_Compiler_Version" != "" ] && [ "$Tr_Compiler_Version" != "default" ] && [ "$CC" = "gcc" ]; then export CXX="g++-${Tr_Compiler_Version}" CC="gcc-${Tr_Compiler_Version}"; fi
-  - if [ "$Tr_Compiler_Version" != "" ] && [ "$Tr_Compiler_Version" != "default" ] && [ "$CC" == "clang" ]; then export CXX="clang++-${Tr_Compiler_Version}" CC="clang-${Tr_Compiler_Version}"; fi
-  - $CC --version
-  - $CXX --version
+  - if [ "$TRAVIS_DIST" = "trusty" ]; then
+      SDL2_version="2.0.5";
+      wget https://www.libsdl.org/release/SDL2-${SDL2_version}.tar.gz &&
+      tar xf SDL2-${SDL2_version}.tar.gz                              &&
+      cd SDL2-${SDL2_version}                                         &&
+      ./configure --enable-static --disable-shared                    &&
+      make                                                            &&
+      sudo make install;
+      cd $TRAVIS_BUILD_DIR;
+    fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then
+      eval "${MATRIX_EVAL}";
+      sudo apt-get update -qq &&
+      sudo $TRAVIS_BUILD_DIR/mk/linux/setupBuildDeps.sh --quiet;
+    else
+      brew update &&
+      brew install sdl2 lua freetype ftgl libogg glew libvorbis cppunit glib fribidi miniupnpc wxmac &&
+      brew outdated cmake || brew upgrade cmake; brew outdated pkgconfig || brew upgrade pkgconfig &&
+      brew link --force gettext;
+    fi
+  - echo $CC
+  - echo $CXX
   - cmake --version
 
 script:
-# ALL THE BUILD COMMANDS HERE
-  - if [ "$TRAVIS_OS_NAME" = "linux" ] && [ "$(echo "$CC" | grep 'clang')" = "" ]; then mk/linux/build-mg.sh -c 4; fi
-  - if [ "$TRAVIS_OS_NAME" = "linux" ] && [ "$(echo "$CC" | grep 'clang')" != "" ]; then mk/linux/build-mg.sh -w -c 4; fi
-  # ^ -w may be removed on more modern dist: than trusty, problems related with 'new wx+clang+old gcc'
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then mk/macos/build-mg.sh -c 4; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then
+      if [ "$TRAVIS_COMPILER" = "gcc" ]; then
+        mk/linux/build-mg.sh -c 4;
+      else
+        mk/linux/build-mg.sh -w -c 4;
+      fi;
+    else
+      mk/macos/build-mg.sh -c 4;
+    fi
 
 # https://docs.travis-ci.com/user/notifications/#IRC-notification
 notifications:
