--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,6 @@ cache: ccache
 matrix:
   include:
     - os: linux
-      dist: trusty
-      compiler: gcc
-      env: DEFAULT_TRAVIS_COMPILER="true" TRAVIS_DIST="trusty"
-# use xenial for new versions of gcc and because libsdl2-dev isn't available
-# on trusty
-    - os: linux
       dist: xenial
       compiler: gcc
       addons:
@@ -17,7 +11,13 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - g++-5
+            - g++-4.7
+      env: MATRIX_EVAL="CC=gcc-4.7 && CXX=g++-4.7"
+# use xenial for new versions of gcc and because libsdl2-dev isn't available
+# on trusty
+    - os: linux
+      dist: xenial
+      compiler: gcc
       env: MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
     - os: linux
       dist: xenial
@@ -76,16 +76,6 @@ git:
   submodules: false
 
 before_install:
-  - if [ "$TRAVIS_DIST" = "trusty" ]; then
-      SDL2_version="2.0.5";
-      wget https://www.libsdl.org/release/SDL2-${SDL2_version}.tar.gz &&
-      tar xf SDL2-${SDL2_version}.tar.gz                              &&
-      cd SDL2-${SDL2_version}                                         &&
-      ./configure --enable-static --disable-shared                    &&
-      make                                                            &&
-      sudo make install;
-      cd $TRAVIS_BUILD_DIR;
-    fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then
       eval "${MATRIX_EVAL}";
       sudo apt-get update -qq &&
@@ -116,6 +106,8 @@ notifications:
   irc:
     channels:
       - "irc.freenode.org#megaglest"
+      - "irc.freenode.org#megaglest-overflow"
+      - "irc.freenode.org#megaglest-de"
     skip_join: true
     use_notice: true
     on_success: change
