--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -6,6 +6,11 @@ SET(TARGET_NAME "megaglest_tests")
 
 IF(BUILD_MEGAGLEST_TESTS)
 	MESSAGE(STATUS "Will try to build MegaGlest unit tests")
+	IF(UNIX AND "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" AND "${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
+		IF("${CMAKE_CXX_COMPILER_VERSION}" VERSION_LESS 5.1)
+			SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=gnu++11)
+		ENDIF()
+	ENDIF()
 
 	INCLUDE (CheckIncludeFiles)
 
