--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,10 @@ matrix:
     - os: linux
       dist: xenial
       compiler: gcc
+      env: MATRIX_EVAL="CC=gcc-5 && CXX=g++-5" FORCE_EMBEDDED="-e"
+    - os: linux
+      dist: xenial
+      compiler: gcc
       addons:
         apt:
           sources:
@@ -59,7 +63,7 @@ matrix:
             - llvm-toolchain-xenial-5.0
           packages:
             - clang-5.0
-      env: MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
+      env: MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0" WITHOUT_WXWIDGETS="-w"
 # osx
     - os: osx
       osx_image: xcode9.4
@@ -91,14 +95,11 @@ before_install:
   - cmake --version
 
 script:
+  - BUILD_OPTIONS="-c 4 $FORCE_EMBEDDED $WITHOUT_WXWIDGETS"
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then
-      if [ "$TRAVIS_COMPILER" = "gcc" ]; then
-        mk/linux/build-mg.sh -c 4;
-      else
-        mk/linux/build-mg.sh -w -c 4;
-      fi;
+      mk/linux/build-mg.sh $BUILD_OPTIONS;
     else
-      mk/macos/build-mg.sh -c 4;
+      mk/macos/build-mg.sh $BUILD_OPTIONS;
     fi
 
 # https://docs.travis-ci.com/user/notifications/#IRC-notification
