--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,16 @@ matrix:
           packages:
             - g++-8
       env: MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
+    - os: linux
+      dist: xenial
+      compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-9
+      env: MATRIX_EVAL="CC=gcc-9 && CXX=g++-9"
 # clang
     - os: linux
       dist: xenial
